--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,381 @@
 
 */
 
+@keyframes grow {
+  to {
+    scale: 1.25;
+  }
+}
+
+@keyframes appear {
+  to {
+    opacity: 1;
+  }
+}
+
 .page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-family: var(--main-font, sans-serif);
+  font-variation-settings: "wght" var(--font-weight-normal, 400);
+  font-size: 18px;
+  background-image: var(--page-background, #fff);
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.header {
+  block-size: clamp(327px, 100%, 368px);
+  margin-block: 100px;
+  padding-block: clamp(7.5rem, 7.3239rem + 0.7512vw, 8rem);
+  font-family: var(--accent-font, sans-serif);
+  font-weight: var(--font-weight-normal, 400);
+  border: 2px solid var(--border-color, #000);
+  text-align: center;
+  background-color: var(--page-item-bgc, #fff);
+}
+
+.page__item-width {
+  min-inline-size: 375px;
+  inline-size: var(--page-item-width, clamp(375px, 100%, 700px));
+}
+
+.header h1 {
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  font-weight: 400;
+  margin-block-end: 20px;
+  white-space: nowrap;
+}
+
+.header h2 {
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
+.card-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 50px;
+}
+
+.card {
+  background-color: var(--page-item-bgc, #fff);
+}
+
+.card__title {
+  padding-block: 3px;
+  padding-inline-start: 10px;
+  font-size: 18px;
+  line-height: 21.78px;
+  font-variation-settings: "wght" var(--font-weight-bold, 700);
+  border: 2px solid var(--border-color, #000);
+}
+
+.card__images-container {
+  position: relative;
+  z-index: 0;
+}
+
+.card__image {
+  display: block;
+  inline-size: 100%;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+}
+
+.card-list__item:not(:first-of-type) .card__images-container {
+  border-inline: 2px solid var(--border-color);
+  border-block-end: 2px solid var(--border-color, #000);
+}
+
+.clean-sheet {
+  filter: saturate(200%);
+}
+
+.doubts {
+  filter: invert(100%);
+}
+
+.perfect {
+  filter: saturate(140%) brightness(90%);
+}
+
+.support {
+  filter: saturate(120%) contrast(110%);
+}
+
+.bypass {
+  filter: blur(1px);
+}
+
+.concentration {
+  filter: sepia(0.3);
+}
+
+.way {
+  filter: contrast(120%) opacity(85%);
+}
+
+.card__label {
+  position: absolute;
+  z-index: 1;
+  inset-inline-end: 25px;
+  inset-block-start: 25px;
+  font-family: var(--accent-font, sans-serif);
+  font-size: 14px;
+  line-height: 14px;
+  text-shadow: -1px 0 var(--label-shadow-color, #fff),
+    0 1px var(--label-shadow-color, #fff), 1px 0 var(--label-shadow-color, #fff),
+    0 -1px var(--label-shadow-color, #fff);
+  mix-blend-mode: hard-light;
+  opacity: 50%;
+}
+
+@supports ((text-stroke: 1px #000000) or (-webkit-text-stroke: 1px #000000)) {
+  .card__label {
+    -webkit-text-stroke: 1px var(--label-shadow-color, #fff);
+    text-stroke: 1px var(--label-shadow-color, #fff);
+    text-shadow: none;
+  }
+}
+
+.card__text {
+  padding: 25px;
+  border-inline: 2px solid var(--border-color, #000);
+  line-height: 21px;
+}
+
+.card__text p:not(:last-of-type) {
+  margin-block-end: 27px;
+}
+
+.card__buttons {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0 25px 25px 0;
+  border: 2px solid var(--border-color, #000);
+  border-block-start: none;
+}
+
+main button {
+  appearance: none;
+  border: none;
+  background-color: transparent;
+}
+
+.card__icon-button {
+  display: flex;
+  align-items: center;
+}
+
+.like-icon {
+  outline: 2px solid transparent;
+  transition: outline 0.3s ease;
+}
+
+.action-button-style {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: var(--accent-font, sans-serif);
+  font-size: 14px;
+  line-height: 12.6px;
+  border: 2px solid var(--border-color, #000);
+  transition: box-shadow 0.3s ease;
+}
+
+.card__like-button {
+  inline-size: 130px;
+  block-size: 40px;
+}
+
+.floppy {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 52px 34.5px 100px;
+  background-color: transparent;
+}
+
+.floppy__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: 8px;
+  max-inline-size: 335px;
+  padding: 15px 18px;
+  background-color: var(--page-item-bgc, #fff);
+}
+
+.floppy__button-icon {
+  position: relative;
+  inline-size: 21px;
+  block-size: 21px;
+  color: var(--button-mixblend-color, #fff);
+  mix-blend-mode: difference;
+}
+
+.button__text {
+  position: relative;
+  white-space: nowrap;
+  color: var(--button-mixblend-color, #fff);
+  mix-blend-mode: difference;
+}
+
+.floppy__dialog[open] {
+  position: fixed;
+  inset: 0;
+  display: grid;
+  max-inline-size: 357px;
+  grid-template-columns: 39px 1fr;
+  justify-self: center;
+  align-self: center;
+  align-items: center;
+  column-gap: 20px;
+  row-gap: 30px;
+  margin-inline: 17px;
+  padding-inline: 30px;
+  padding-block: 30px;
+  border: 2px solid var(--border-color, #000);
+}
+
+.floppy__dialog[open]::backdrop {
+  background-color: rgb(0 0 0 / 0.75);
+}
+
+.floppy__dialog-icon {
+  inline-size: 39px;
+  block-size: 39px;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+.floppy__dialog-message {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  font-family: var(--accent-font, sans-serif);
+  font-size: 14px;
+  font-weight: var(--font-weight-normal, 400);
+  line-height: 21px;
+  text-transform: uppercase;
+}
+
+.floppy__dialog-button-close {
+  inline-size: 100%;
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+  padding-block: 12.5px;
+}
+
+button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible .like-icon {
+  outline: 2px solid var(--button-state-accent-color, #000);
+}
+
+.action-button-style:focus-visible {
+  box-shadow: 2px 2px var(--button-state-accent-color, #000);
+}
+
+.action-button-style:not(.floppy__dialog-button-close)::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: var(--button-state-accent-color, #000);
+  transform: scaleX(0);
+  transform-origin: left center;
+  transition: transform 0.5s ease-in-out;
+}
+
+.action-button-style:not(.floppy__dialog-button-close):hover::before {
+  transform: scaleX(1);
+}
+
+.core {
+  transition: fill 0.3s ease 0.03s;
+}
+
+.like-icon:hover .core {
+  fill: var(--like-contour-color, #000);
+  transition: fill 0.3s ease 0s;
+}
+
+.like-icon:active .core {
+  fill: var(--like-fill-color, #f00);
+  transition: fill 0.3s ease 0s;
+}
+
+.main-body {
+  transition: fill 0.3s ease 0s;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--like-contour-color, #000);
+  transition: fill 0.3s ease 0.05s;
+}
+
+.like-icon:active .main-body {
+  fill: var(--like-fill-color, #f00);
+  transition: fill 0.3s ease 0s;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--like-fill-color, #f00);
+  transition: fill 0.3s ease 0s;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--like-fill-color, #f00);
+  transition: fill 0.3s ease 0s;
+}
+
+.contour {
+  transition: fill 0.3s linear 0.1s;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--like-fill-color, #f00);
+  transition: fill 0.3s ease 0.06s;
+}
+
+.like-icon.is-liked .heart {
+  animation: grow 0.3s ease-in 0.1s 1;
+  transform-origin: center;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.like-icon.is-liked .sparks {
+  opacity: 0;
+  animation: appear 0.3s ease-in 0.3s 1;
+}
+
+@media (width <= 375px) {
+  :root {
+    --page-item-width: 100%;
+  }
+
+  .card__label {
+    inset-inline-end: 13px;
+  }
+
+  .floppy__button {
+    flex-wrap: wrap;
+  }
+
+  .floppy__button-icon {
+    inline-size: 28px;
+    block-size: 28px;
+  }
 }
