--- a/styles/style.css
+++ b/styles/style.css
@@ -10,18 +10,6 @@
 
 */
 
-@keyframes grow {
-  to {
-    scale: 1.25;
-  }
-}
-
-@keyframes appear {
-  to {
-    opacity: 1;
-  }
-}
-
 .page {
   display: flex;
   flex-direction: column;
@@ -32,15 +20,15 @@
   font-variation-settings: "wght" var(--font-weight-normal, 400);
   font-size: 18px;
   background-image: var(--page-background, #fff);
+  background-color: #808080;
   background-size: cover;
   background-attachment: fixed;
 }
 
 .header {
-  block-size: clamp(327px, 100%, 368px);
   margin-block: 100px;
   padding-block: clamp(7.5rem, 7.3239rem + 0.7512vw, 8rem);
-  font-family: var(--accent-font, sans-serif);
+  font-family: var(--accent-font, fantasy);
   font-weight: var(--font-weight-normal, 400);
   border: 2px solid var(--border-color, #000);
   text-align: center;
@@ -52,14 +40,14 @@
   inline-size: var(--page-item-width, clamp(375px, 100%, 700px));
 }
 
-.header h1 {
+.header__title {
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   font-weight: 400;
   margin-block-end: 20px;
   white-space: nowrap;
 }
 
-.header h2 {
+.header__paragraph {
   font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
   text-transform: uppercase;
   font-weight: 400;
@@ -80,7 +68,7 @@
   padding-block: 3px;
   padding-inline-start: 10px;
   font-size: 18px;
-  line-height: 21.78px;
+  line-height: 1.21; 
   font-variation-settings: "wght" var(--font-weight-bold, 700);
   border: 2px solid var(--border-color, #000);
 }
@@ -102,31 +90,31 @@
   border-block-end: 2px solid var(--border-color, #000);
 }
 
-.clean-sheet {
+.saturate {
   filter: saturate(200%);
 }
 
-.doubts {
+.invert {
   filter: invert(100%);
 }
 
-.perfect {
+.saturate-brightness {
   filter: saturate(140%) brightness(90%);
 }
 
-.support {
+.saturate-contrast {
   filter: saturate(120%) contrast(110%);
 }
 
-.bypass {
+.blur {
   filter: blur(1px);
 }
 
-.concentration {
+.sepia {
   filter: sepia(0.3);
 }
 
-.way {
+.contrast-opacity {
   filter: contrast(120%) opacity(85%);
 }
 
@@ -135,9 +123,9 @@
   z-index: 1;
   inset-inline-end: 25px;
   inset-block-start: 25px;
-  font-family: var(--accent-font, sans-serif);
+  font-family: var(--accent-font, fantasy);
   font-size: 14px;
-  line-height: 14px;
+  line-height: 1;
   text-shadow: -1px 0 var(--label-shadow-color, #fff),
     0 1px var(--label-shadow-color, #fff), 1px 0 var(--label-shadow-color, #fff),
     0 -1px var(--label-shadow-color, #fff);
@@ -156,7 +144,7 @@
 .card__text {
   padding: 25px;
   border-inline: 2px solid var(--border-color, #000);
-  line-height: 21px;
+  line-height: 1.166;
 }
 
 .card__text p:not(:last-of-type) {
@@ -175,16 +163,17 @@ main button {
   appearance: none;
   border: none;
   background-color: transparent;
+  cursor: pointer;
 }
 
 .card__icon-button {
   display: flex;
   align-items: center;
+  transition: outline 0.3s ease;
 }
 
 .like-icon {
   outline: 2px solid transparent;
-  transition: outline 0.3s ease;
 }
 
 .action-button-style {
@@ -192,16 +181,15 @@ main button {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: var(--accent-font, sans-serif);
+  font-family: var(--accent-font, fantasy);
   font-size: 14px;
-  line-height: 12.6px;
+  line-height: 0.9;
   border: 2px solid var(--border-color, #000);
   transition: box-shadow 0.3s ease;
 }
 
 .card__like-button {
   inline-size: 130px;
-  block-size: 40px;
 }
 
 .floppy {
@@ -269,10 +257,10 @@ main button {
 .floppy__dialog-message {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
-  font-family: var(--accent-font, sans-serif);
+  font-family: var(--accent-font, fantasy);
   font-size: 14px;
   font-weight: var(--font-weight-normal, 400);
-  line-height: 21px;
+  line-height: 1.5;
   text-transform: uppercase;
 }
 
@@ -281,6 +269,7 @@ main button {
   grid-column: 1 / 3;
   grid-row: 2 / 3;
   padding-block: 12.5px;
+  text-transform: uppercase;
 }
 
 button:focus {
@@ -310,6 +299,7 @@ button:focus {
 }
 
 .core {
+  fill: transparent;
   transition: fill 0.3s ease 0.03s;
 }
 
@@ -324,6 +314,7 @@ button:focus {
 }
 
 .main-body {
+  fill: transparent;
   transition: fill 0.3s ease 0s;
 }
 
@@ -334,7 +325,7 @@ button:focus {
 
 .like-icon:active .main-body {
   fill: var(--like-fill-color, #f00);
-  transition: fill 0.3s ease 0s;
+  transition: fill 0.3s ease 0.05s;
 }
 
 .like-icon.is-liked .core {
@@ -344,11 +335,11 @@ button:focus {
 
 .like-icon.is-liked .main-body {
   fill: var(--like-fill-color, #f00);
-  transition: fill 0.3s ease 0s;
+  transition: fill 0.3s ease 0.05s;
 }
 
 .contour {
-  transition: fill 0.3s linear 0.1s;
+  transition: fill 0.1s linear;
 }
 
 .like-icon.is-liked .contour {
